prog templates : completed, fixed & xhtml valid

--- a/koha-tmpl/intranet-tmpl/prog/en/members/boraccount.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/boraccount.tmpl
@@ -1,9 +1,13 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Account for  <!-- TMPL_VAR NAME="surname" -->, <!-- TMPL_VAR NAME="firstname" --><!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-members.inc" -->
+
 <!-- The table with the account items -->
 
+<h1>Account for <!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></h1>
+
 <table>
-<caption>Account for <!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></caption>
   <tr>
   	<th>Date</th>
     <th>Description of Charges</th>
