--- a/koha-tmpl/intranet-tmpl/prog/en/members/member-password.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/member-password.tmpl
@@ -1,23 +1,30 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" --><!-- TMPL_IF NAME="newpassword" -->Password Updated <!-- TMPL_ELSE -->Update Password for <!-- TMPL_VAR NAME="surname" -->, <!-- TMPL_VAR NAME="firstname" --><!-- /TMPL_IF --><!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-members.inc" -->
+
 <!-- TMPL_IF NAME="newpassword" -->
-<h3>Password Updated</h3>
+<h1>Password Updated</h1>
 
 <!-- TMPL_ELSE -->
 
 <form method="post" action="/cgi-bin/koha/members/member-password.pl">
-<h3>Change Username and/or Password for <!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></h3>
+<h1>Change Username and/or Password for <!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></h1>
 	
 	<!-- TMPL_IF NAME="warn" -->
 		<p>You have entered a User ID that already exists.  Please choose another one.</p>
 	<!-- /TMPL_IF -->
 
-<table><tr><th scope="row">New UserID:</th><td><input type="hidden" name="member" value="<!-- TMPL_VAR NAME="member" -->" />
-	
-<input name="newuserid" size="20" value="<!-- TMPL_VAR NAME=userid -->" /></td></tr>
-<tr><th scope="row">New Password:</th><td><input name="newpassword" type="text" size="20" value="<!-- TMPL_VAR NAME="defaultnewpassword" -->" /></td></tr></table>
-
-<input type="submit" value="Confirm Password" /> 
+<p>
+	<label>New UserID:</label>
+	<input type="hidden" name="member" value="<!-- TMPL_VAR NAME="member" -->" />
+	<input name="newuserid" size="20" value="<!-- TMPL_VAR NAME=userid -->" />
+</p>
+<p>
+	<label>New Password:</label>
+	<input name="newpassword" type="text" size="20" value="<!-- TMPL_VAR NAME="defaultnewpassword" -->" />
+</p>
+<p><input type="submit" value="Confirm Password" /></p>
 </form><!-- /TMPL_IF -->
 
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
