--- a/koha-tmpl/intranet-tmpl/prog/en/members/member-flags.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/member-flags.tmpl
@@ -1,5 +1,8 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Set Privileges for <!-- TMPL_VAR NAME="surname" -->, <!-- TMPL_VAR NAME="firstname" --><!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-members.inc" -->
+
 <form method="post" action="/cgi-bin/koha/members/member-flags.pl">
 	<input type="hidden" name="member" value="<!-- TMPL_VAR NAME="member" -->" />
 	<input type="hidden" name="newflags" value="1" />
