--- a/koha-tmpl/intranet-tmpl/prog/en/members/member.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/member.tmpl
@@ -1,31 +1,33 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Member Search Results<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Member search result<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
-<table>
-<caption>Member Search Results</caption>
-  <tr>
-    <th>Card</th>
-    <th>Name</th>
-    <th>Cat</th>
-    <th>Address</th>
-    <th>OD/Issues</th>
-	<th>Charges</th>
-    <th>Notes</th>
-  </tr>
-  <!-- TMPL_IF NAME="resultsloop" -->
-  <!-- TMPL_LOOP NAME="resultsloop" -->
-  
-  <tr> <td><!-- TMPL_VAR NAME="cardnumber" --></td>
-      <td><a href="/cgi-bin/koha/members/moremember.pl?bornum=<!-- TMPL_VAR NAME="borrowernumber" -->"><!-- TMPL_VAR NAME="surname" -->, <!-- TMPL_VAR NAME="firstname" --></a> </td>
-      <td><!-- TMPL_VAR NAME="categorycode" --></td>
-      <td><!-- TMPL_VAR NAME="streetaddress" --> <!-- TMPL_VAR NAME=city --></td>
-      <td><!-- TMPL_VAR NAME="odissue" --></td>
-	<td><!-- TMPL_VAR NAME="fines" --></td>
-      <td><!-- TMPL_VAR NAME="borrowernotes" --></td>
-</tr>
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-members.inc" -->
+
+<h1>Member Search Results</h1>
+
+<!-- TMPL_IF NAME="resultsloop" -->
+	<table>
+	<tr>
+		<th>Card</th>
+		<th>Name</th>
+		<th>Cat</th>
+		<th>Address</th>
+		<th>OD/Issues</th>
+		<th>Charges</th>
+		<th>Notes</th>
+	</tr>
+	<!-- TMPL_LOOP NAME="resultsloop" -->
+	<tr>
+		<td><!-- TMPL_VAR NAME="cardnumber" --></td>
+		<td><a href="/cgi-bin/koha/members/moremember.pl?bornum=<!-- TMPL_VAR NAME="borrowernumber" -->"><!-- TMPL_VAR NAME="surname" -->, <!-- TMPL_VAR NAME="firstname" --></a> </td>
+		<td><!-- TMPL_VAR NAME="categorycode" --></td>
+		<td><!-- TMPL_VAR NAME="streetaddress" --> <!-- TMPL_VAR NAME=city --></td>
+		<td><!-- TMPL_VAR NAME="odissue" --></td>
+		<td><!-- TMPL_VAR NAME="fines" --></td>
+		<td><!-- TMPL_VAR NAME="borrowernotes" --></td>
+	</tr>
     <!-- /TMPL_LOOP -->
-  <!-- TMPL_ELSE --><td colspan="6">No results found</td><!-- /TMPL_IF -->
 </table>
-
-
+<!-- TMPL_ELSE --><p>No results found</p><!-- /TMPL_IF -->
 
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
