--- a/koha-tmpl/intranet-tmpl/prog/en/members/members-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/members-home.tmpl
@@ -1,8 +1,8 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Member Search<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
-<title>Member Search</title>
-</head>
-<body>
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-members.inc" -->
+
 <h1>Member Search</h1>
 
 	<form action="/cgi-bin/koha/members/member.pl" method="post">
