--- a/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
@@ -1,100 +1,162 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Member Details<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-members.inc" -->
+
 <h1><!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --> (<!-- TMPL_VAR NAME="cardnumber" -->)</h1>
 
 <ul>
-	<!-- TMPL_IF name="IS_ADULT" --><li> <form action="/cgi-bin/koha/members/jmemberentry.pl" method="post"> <input type="submit" name="submit" value="Add Child" alt="Add Child" /><input type="hidden" name="type" value="add" /><input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="borrowernumber" -->" /></form></li><!-- /TMPL_IF -->
-	<li><!-- TMPL_IF name="I" --><form action="/cgi-bin/koha/members/imemberentry.pl" method="post"><input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="bornum" -->" /> <input type="submit" name="modify" value="Edit this Record" /></form><!-- TMPL_ELSE --> <form action="/cgi-bin/koha/members/memberentry.pl" method="post"><input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="bornum" -->" /> <input type="submit" name="modify" value="Edit this Record" /></form><!-- /TMPL_IF --></li>
-	<li><form action="/cgi-bin/koha/members/member-password.pl" method="post"><input type="hidden" name="member" value="<!-- TMPL_VAR NAME=bornum -->" /> <input type="submit" value="Change Member's Password" /></form></li>
-	<li> <form action="/cgi-bin/koha/members/member-flags.pl" method="post"><input type="hidden" name="member" value="<!-- TMPL_VAR NAME=bornum -->" /> <input type="submit" value="Modify Member's Privileges" /></form></li>
-	<li><form action="/cgi-bin/koha/members/deletemem.pl?member=<!-- TMPL_VAR NAME="bornum" -->"><input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="bornum" -->"><input type="submit" class="cancel" value="Delete this Member"></form></li>
-	<li><form action="/cgi-bin/koha/boraccount.pl" method="get"><input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" /><input type="submit" value="View Account" /></form></li>
-	<li>	<form action="/cgi-bin/koha/pay.pl" method="get"><input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" /><input type="submit" value="Pay Fines" /></form></li>
-<li><form action="/cgi-bin/koha/readingrec.pl" method="get"><input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" /> <input type="submit" value="Member's Reading Record" /></form></li>
+	<!-- TMPL_IF name="IS_ADULT" -->
+	<li>
+	<form action="/cgi-bin/koha/members/jmemberentry.pl" method="post">
+		<input type="submit" name="submit" value="Add Child" alt="Add Child" />
+		<input type="hidden" name="type" value="add" />
+		<input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="borrowernumber" -->" />
+	</form>
+	</li>
+	<!-- /TMPL_IF -->
+	<li>
+	<!-- TMPL_IF name="I" -->
+	<form action="/cgi-bin/koha/members/imemberentry.pl" method="post">
+		<input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="bornum" -->" />
+		<input type="submit" name="modify" value="Edit this Record" />
+	</form>
+	<!-- TMPL_ELSE -->
+		<form action="/cgi-bin/koha/members/memberentry.pl" method="post">
+			<input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="bornum" -->" />
+			<input type="submit" name="modify" value="Edit this Record" />
+		</form>
+	<!-- /TMPL_IF -->
+	</li>
+	<li>
+		<form action="/cgi-bin/koha/members/member-password.pl" method="post">
+			<input type="hidden" name="member" value="<!-- TMPL_VAR NAME=bornum -->" />
+			<input type="submit" value="Change Member's Password" />
+		</form>
+	</li>
+	<li>
+		<form action="/cgi-bin/koha/members/member-flags.pl" method="post">
+			<input type="hidden" name="member" value="<!-- TMPL_VAR NAME=bornum -->" />
+			<input type="submit" value="Modify Member's Privileges" />
+		</form>
+	</li>
+	<li>
+		<form action="/cgi-bin/koha/members/deletemem.pl?member=<!-- TMPL_VAR NAME="bornum" -->">
+			<input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="bornum" -->" />
+			<input type="submit" class="cancel" value="Delete this Member" />
+		</form>
+	</li>
+	<li>
+		<form action="/cgi-bin/koha/members/boraccount.pl" method="get">
+			<input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" />
+			<input type="submit" value="View Account" />
+		</form>
+	</li>
+	<li>
+		<form action="/cgi-bin/koha/members/pay.pl" method="get">
+			<input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" />
+			<input type="submit" value="Pay Fines" />
+		</form>
+	</li>
+	<li>
+		<form action="/cgi-bin/koha/members/readingrec.pl" method="get">
+			<input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" />
+			<input type="submit" value="Member's Reading Record" />
+		</form>
+	</li>
 </ul>
 
 <!-- TMPL_IF NAME="flagged" -->
 	<ul>
-		<!-- TMPL_IF NAME="debarred" --><li>Patron is debarred <form class="inline compact" action="/cgi-bin/koha/members/setdebar.pl" method="post"><input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="borrowernumber" -->" /><input type="hidden" name="status" value="0" /><input type="submit" value="Lift Debarment" /></form></li><!-- /TMPL_IF -->
+		<!-- TMPL_IF NAME="debarred" -->
+			<li>Patron is debarred 
+			<form class="inline compact" action="/cgi-bin/koha/members/setdebar.pl" method="post">
+				<input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="borrowernumber" -->" />
+				<input type="hidden" name="status" value="0" />
+				<input type="submit" value="Lift Debarment" />
+			</form>
+			</li>
+		<!-- /TMPL_IF -->
 		<!-- TMPL_IF NAME="gonenoaddress" --><li>Patron's address is in doubt.</li><!-- /TMPL_IF -->
 		<!-- TMPL_IF NAME="lost" --><li>Patron's card has been reported lost.</li><!-- /TMPL_IF -->
 	</ul>
 
 <!-- /TMPL_IF -->
 
-<table>
-<caption>Borrower Information</caption>
-<tr><th scope="row">Title (borrowers.title): </th><td><!-- TMPL_VAR NAME="title" --></td></tr>
-<tr><th scope="row">First Name (borrowers.firstname):</th><td><!-- TMPL_VAR NAME="firstname" --></td></tr>
-<tr><th scope="row">Last Name (borrowers.lastname): </th><td></td></tr>
-<tr><th scope="row">Othernames (borrowers.othernames): </th><td><!-- TMPL_VAR NAME="othernames" --></td></tr>
-<tr><th scope="row">Initials (borrowers.initials): </th><td><!-- TMPL_VAR NAME="initials" --></td></tr>
-<tr><th scope="row">Street Address (borrowers.streetaddress): </th><td><!-- TMPL_VAR NAME="streetaddress" --></td></tr>
-<tr><th scope="row">City (borrowers.city): </th><td><!-- TMPL_VAR NAME="city" --></td></tr>
-<tr><th scope="row">Zip Code (borrowers.zipcode): </th><td><!-- TMPL_VAR NAME="zipcode" --></td></tr>
+<h2>Borrower Information</h2>
+<p><label>Title (borrowers.title):</label><!-- TMPL_VAR NAME="title" --></p>
+<p><label>First Name (borrowers.firstname):</label><!-- TMPL_VAR NAME="firstname" --></p>
+<p><label>Last Name (borrowers.lastname): </label><!-- TMPL_VAR NAME="surname" --></p>
+<p><label>Othernames (borrowers.othernames): </label><!-- TMPL_VAR NAME="othernames" --></p>
+<p><label>Initials (borrowers.initials): </label><!-- TMPL_VAR NAME="initials" --></p>
+<p><label>Street Address (borrowers.streetaddress): </label><!-- TMPL_VAR NAME="streetaddress" --></p>
+<p><label>City (borrowers.city): </label><!-- TMPL_VAR NAME="city" --></p>
+<p><label>Zip Code (borrowers.zipcode): </label><!-- TMPL_VAR NAME="zipcode" --></p>
 
-<!-- TMPL_UNLESS NAME="I"--><tr><th scope="row">(borrowers.physstreet): </th><td><!-- TMPL_VAR NAME="physstreet" --></td></tr>
-<tr><th scope="row">(borrowers.streetcity): </th><td><!-- TMPL_VAR NAME="streetcity" --></td></tr>
-<tr><th scope="row">(borrowers.homezipcode): </th><td><!-- TMPL_VAR NAME="homezipcode" --></td></tr><!-- /TMPL_UNLESS -->
-
-<tr><th scope="row">Home Phone (borrowers.phone): </th><td><!-- TMPL_VAR NAME="phone" --></td></tr>
-<tr><th scope="row">Daytime Phone (borrowers.phoneday): </th><td><!-- TMPL_VAR NAME="phoneday" --></td></tr>
-<tr><th scope="row">Fax (borrowers.faxnumber): </th><td><!-- TMPL_VAR NAME="faxnumber" --></td></tr>
-<tr><th scope="row">E-mail Address (borrowers.emailaddress):</th><td><!-- TMPL_VAR NAME="emailaddress" --></td></tr>
-
-<!-- TMPL_UNLESS name="I" -->
-<tr><th scope="row">Date of Birth (borrowers.dateofbirth):</th><td><!-- TMPL_VAR NAME="dateofbirth" --></td></tr>
-<tr><th scope="row">Sex (borrowers.sex):</th><td><!-- TMPL_VAR NAME="sex" --></td></tr>
+<!-- TMPL_UNLESS NAME="I"-->
+<p><label>(borrowers.physstreet): </label><!-- TMPL_VAR NAME="physstreet" --></p>
+<p><label>(borrowers.streetcity): </label><!-- TMPL_VAR NAME="streetcity" --></p>
+<p><label>(borrowers.homezipcode): </label><!-- TMPL_VAR NAME="homezipcode" --></p>
 <!-- /TMPL_UNLESS -->
 
-<tr><th scope="row">Member Number (borrowers.borrowernumber):</th><td><!-- TMPL_VAR NAME="borrowernumber" --></td></tr>
-<tr><th scope="row">Category (borrowers.categorycode):</th><td><!-- TMPL_VAR NAME="categorycode" --></td></tr>
-<tr><th scope="row">Registration Date (borrowers.dateenrolled):</th><td><!-- TMPL_VAR NAME="dateenrolled" --></td></tr>
-<tr><th scope="row">Expiration Date (borrowers.expiry): </th><td><!-- TMPL_VAR NAME="expiry" --></td></tr>
-<tr><th scope="row">Registration Branch (borrowers.branchcode):</th><td><!-- TMPL_VAR NAME="branchcode" --></td></tr>
-
-<!-- TMPL_IF NAME="printethnicityline" -->
-<tr><th scope="row">Ethnicity (borrowers.ethnicity):</th><td><!-- TMPL_VAR NAME="ethnicity" --></td></tr>
-<tr><th scope="row">Ethnicity Notes (borrowers.ethnotes): </th><td><!-- TMPL_VAR NAME="ethnotes" --></td></tr>
-<!-- /TMPL_IF -->
-
-<tr><th scope="row">Sort field 1 (borrowers.sort1): </th><td><!-- TMPL_VAR NAME="sort1" --></td></tr>
-<tr><th scope="row">Sort field 2 (borrowers.sort2):</th> <td><!-- TMPL_VAR NAME="sort2" --></td></tr>
-<tr><th scope="row">OPAC login (borrowers.userid): </th><td><!-- TMPL_VAR name="userid" --></td></tr>
-<tr><th scope="row">OPAC Password (borrowers.password): </th><td><!-- TMPL_VAR NAME="password" --></td></tr> 
-<tr><th scope="row">Circulation Notes (borrowers.borrowernotes) :</th> <td><!-- TMPL_VAR name="borrowernotes" --></td></tr>
-<tr><th scope="row">Patron Message (borrowers.textmessaging):</th><td><!-- TMPL_VAR NAME="textmessaging" --></td></tr>
+<p><label>Home Phone (borrowers.phone): </label><!-- TMPL_VAR NAME="phone" --></p>
+<p><label>Daytime Phone (borrowers.phoneday): </label><!-- TMPL_VAR NAME="phoneday" --></p>
+<p><label>Fax (borrowers.faxnumber): </label><!-- TMPL_VAR NAME="faxnumber" --></p>
+<p><label>E-mail Address (borrowers.emailaddress):</label><!-- TMPL_VAR NAME="emailaddress" --></p>
 
 <!-- TMPL_UNLESS name="I" -->
-<tr><th scope="row">Alternate Contact Name (borrowers.contactname):</th><td><!-- TMPL_VAR NAME="contactname" --></td></tr>
-<tr><th scope="row">Alternate Contact Phone (borrowers.altphone): </th><td><!-- TMPL_VAR NAME="altphone" --></td></tr>
-<tr><th scope="row">Alternate Contact Relationship (borrowers.altrelationship):</th><td><!-- TMPL_VAR NAME="altrelationship" --></td></tr>
-<tr><th scope="row">Alternate Contact Notes (borrowers.altnotes): </th><td><!-- TMPL_VAR NAME="altnotes" --></td></tr>
+<p><label>Date of Birth (borrowers.dateofbirth):</label><!-- TMPL_VAR NAME="dateofbirth" --></p>
+<p><label>Sex (borrowers.sex):</label><!-- TMPL_VAR NAME="sex" --></p>
+<!-- /TMPL_UNLESS -->
+
+<p><label>Member Number (borrowers.borrowernumber):</label><!-- TMPL_VAR NAME="borrowernumber" --></p>
+<p><label>Category (borrowers.categorycode):</label><!-- TMPL_VAR NAME="categorycode" --></p>
+<p><label>Registration Date (borrowers.dateenrolled):</label><!-- TMPL_VAR NAME="dateenrolled" --></p>
+<p><label>Expiration Date (borrowers.expiry): </label><!-- TMPL_VAR NAME="expiry" --></p>
+<p><label>Registration Branch (borrowers.branchcode):</label><!-- TMPL_VAR NAME="branchname" --></p>
+
+<!-- TMPL_IF NAME="printethnicityline" -->
+<p><label>Ethnicity (borrowers.ethnicity):</label><!-- TMPL_VAR NAME="ethnicity" --></p>
+<p><label>Ethnicity Notes (borrowers.ethnotes): </label><!-- TMPL_VAR NAME="ethnotes" --></p>
+<!-- /TMPL_IF -->
+
+<p><label>Sort field 1 (borrowers.sort1): </label><!-- TMPL_VAR NAME="sort1" --></p>
+<p><label>Sort field 2 (borrowers.sort2):</label><!-- TMPL_VAR NAME="sort2" --></p>
+<p><label>OPAC login (borrowers.userid): </label><!-- TMPL_VAR name="userid" --></p>
+<p><label>OPAC Password (borrowers.password): </label><!-- TMPL_VAR NAME="password" --></p> 
+<p><label>Circulation Notes (borrowers.borrowernotes) :</label><!-- TMPL_VAR name="borrowernotes" --></p>
+<p><label>Patron Message (borrowers.textmessaging):</label><!-- TMPL_VAR NAME="textmessaging" --></p>
+
+<!-- TMPL_UNLESS name="I" -->
+<p><label>Alternate Contact Name (borrowers.contactname):</label><!-- TMPL_VAR NAME="contactname" --></p>
+<p><label>Alternate Contact Phone (borrowers.altphone): </label><!-- TMPL_VAR NAME="altphone" --></p>
+<p><label>Alternate Contact Relationship (borrowers.altrelationship):</label><!-- TMPL_VAR NAME="altrelationship" --></p>
+<p><label>Alternate Contact Notes (borrowers.altnotes): </label><!-- TMPL_VAR NAME="altnotes" --></p>
 <!-- /TMPL_UNLESS -->
 
 		<!-- TMPL_UNLESS name="I" -->
 			<!-- TMPL_IF name="isguarantee" -->
-				<!-- TMPL_IF NAME="guaranteeloop" --><tr><th scope="row">Guarantees:</th><td><ul><!-- tmpl_loop name="guaranteeloop" --><li><a href="/cgi-bin/koha/members/moremember.pl?bornum=<!-- TMPL_VAR NAME="borrowernumber" -->"><!-- TMPL_VAR NAME=name --> - <!-- TMPL_VAR NAME="cardnumber" --></a></li><!-- /tmpl_loop --></ul></td></tr><!-- /TMPL_IF -->
-
+				<!-- TMPL_IF NAME="guaranteeloop" -->
+					<p><label>Guarantees:</label><ul><!-- tmpl_loop name="guaranteeloop" --><li><a href="/cgi-bin/koha/members/moremember.pl?bornum=<!-- TMPL_VAR NAME="borrowernumber" -->"><!-- TMPL_VAR NAME=name --> - <!-- TMPL_VAR NAME="cardnumber" --></a></li><!-- /tmpl_loop --></ul></p>
+				<!-- /TMPL_IF -->
 			<!-- TMPL_ELSE -->
-
-<!-- TMPL_IF name="guarantorborrowernumber" --><tr><th scope="row">Guarantor:</th>
-					<td><a href="/cgi-bin/koha/members/moremember.pl?bornum=<!-- TMPL_VAR NAME="guarantorborrowernumber" -->"><!-- TMPL_VAR NAME="guarantorcardnumber" --></a></td></tr><!-- /TMPL_IF -->
-
+				<!-- TMPL_IF name="guarantorborrowernumber" -->
+					<p><label>Guarantor:</label><a href="/cgi-bin/koha/members/moremember.pl?bornum=<!-- TMPL_VAR NAME="guarantorborrowernumber" -->"><!-- TMPL_VAR NAME="guarantorcardnumber" --></a></p>
+				<!-- /TMPL_IF -->
 			<!-- /TMPL_IF -->
-			
 		<!-- /TMPL_UNLESS -->
-</table>
 
-<h3>Fines &amp; Charges</h3>
-	<!-- TMPL_IF name="totaldue" -->Total Due: <!-- TMPL_VAR NAME="totaldue" -->
+<h2>Fines &amp; Charges</h2>
+	<!-- TMPL_IF name="totaldue" -->
+		<p>Total Due: <!-- TMPL_VAR NAME="totaldue" --></p>
 	<!-- TMPL_ELSE -->
-	No Outstanding Charges<!-- /TMPL_IF -->
+		<p>No Outstanding Charges</p>
+	<!-- /TMPL_IF -->
 
+<h2>Items On Loan</h2>
 <form action="renewscript.pl" method="post">
 	<input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" />
 <table>
-	<caption>Items On Loan</caption>
 	<tr>
 		<th scope="col">Title</th>
 		<th scope="col">Due</th>
@@ -107,11 +169,12 @@
 
 	<!-- tmpl_loop name="issueloop" -->
 	<tr>
-		<td><!-- TMPL_IF name="red" --><span class="overdue"><!-- /TMPL_IF -->
-		<!-- TMPL_VAR NAME="title" --><!-- TMPL_IF name="red" --></span><!-- /TMPL_IF -->
-		<a href="/cgi-bin/koha/detail.pl?item=<!-- TMPL_VAR NAME="itemnumber" -->&amp;bib=<!-- TMPL_VAR NAME="biblionumber" -->&amp;bi=<!-- TMPL_VAR NAME="biblioitemnumber" -->">
-			<!-- TMPL_VAR NAME="barcode" -->
-		</a>
+		<td>
+			<!-- TMPL_IF name="red" --><span class="overdue"><!-- /TMPL_IF -->
+			<!-- TMPL_VAR NAME="title" --><!-- TMPL_IF name="red" --></span><!-- /TMPL_IF -->
+			<a href="/cgi-bin/koha/detail.pl?item=<!-- TMPL_VAR NAME="itemnumber" -->&amp;bib=<!-- TMPL_VAR NAME="biblionumber" -->&amp;bi=<!-- TMPL_VAR NAME="biblioitemnumber" -->">
+				<!-- TMPL_VAR NAME="barcode" -->
+			</a>
 		</td>
 		<td><!-- TMPL_VAR NAME="date_due" --></td>
 		<td><!-- TMPL_VAR NAME="itemtype" --></td>
@@ -127,26 +190,29 @@
 		<td><a href="/cgi-bin/koha/circ/returns.pl?barcode=<!-- TMPL_VAR NAME="barcode" -->">Return</a></td>
 	</tr>
 	<!-- /tmpl_loop -->
-	<tfoot><tr><td colspan="3">Total Replacement Cost:</td><td><!-- TMPL_VAR NAME="totalprice" --></td><td colspan="2">&nbsp;</td></tr></tfoot>
+	<tr><td colspan="3">Total Replacement Cost:</td><td><!-- TMPL_VAR NAME="totalprice" --></td><td colspan="2">&nbsp;</td></tr>
 	</table><p><input type="submit" value="Renew Checked Items" /></p>
 </form>
 
-<form action="renewscript.pl" method="post"><input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" /><!-- TMPL_LOOP NAME="issueloop" --><!-- TMPL_UNLESS NAME="norenew" --><input type="hidden" name="renew_item_<!-- TMPL_VAR NAME="itemnumber" -->" value="y" /><!-- /TMPL_UNLESS --><!-- /TMPL_LOOP --><input type="submit" value="Renew All" /></form>
+<form action="renewscript.pl" method="post">
+	<input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" />
+	<!-- TMPL_LOOP NAME="issueloop" -->
+		<!-- TMPL_UNLESS NAME="norenew" -->
+			<input type="hidden" name="renew_item_<!-- TMPL_VAR NAME="itemnumber" -->" value="y" />
+		<!-- /TMPL_UNLESS -->
+	<!-- /TMPL_LOOP -->
+	<input type="submit" value="Renew All" />
+</form>
 
-
-
-
-	<form action="/cgi-bin/koha/modrequest.pl" method="post">
+<h2>Reserves</h2>
+<form action="/cgi-bin/koha/modrequest.pl" method="post">
 	<input type="hidden" name="from" value="borrower" />
 	<table>
-	<caption>Reserves</caption>
 	<tr>
 		<th scope="row">Title</th>
 		<th scope="row">Requested</th>
 		<th scope="row">Remove</th>
 	</tr>
-
-
 
 	<!-- TMPL_LOOP name="reserveloop" -->
 	<tr>
@@ -168,8 +234,10 @@
 		<input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="bornum" -->" />
 	</tr>
 	<!-- /tmpl_loop -->
+</table>
+<!-- TMPL_IF name="reserveloop" -->
+	<input type="submit" class="cancel" name="submit" value="Cancel Marked Requests" />
+<!-- /TMPL_IF -->
+</form>
 
-</table>		<!-- TMPL_IF name="reserveloop" -->
-			<input type="submit" class="cancel" name="submit" value="Cancel Marked Requests" />
-		<!-- /TMPL_IF --></form>
-
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
