--- a/koha-tmpl/intranet-tmpl/prog/en/members/pay.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/pay.tmpl
@@ -1,15 +1,18 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Pay Fines for  <!-- TMPL_VAR NAME="surname" -->, <!-- TMPL_VAR NAME="firstname" --><!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
-	<form action="/cgi-bin/koha/pay.pl" method="post"><input type="hidden" name="bornum" value="<!-- TMPL_VAR name="bornum" -->" />
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-members.inc" -->
 
+<h1>Pay Fines for <!-- TMPL_VAR name="firstname" --> <!-- TMPL_VAR name="surname" --></h1>
+<form action="/cgi-bin/koha/pay.pl" method="post">
+	<input type="hidden" name="bornum" value="<!-- TMPL_VAR name="bornum" -->" />
 <table>
-<caption>Pay Fines for <!-- TMPL_VAR name="firstname" --> <!-- TMPL_VAR name="surname" --></caption>
 <tr>
-	<th scope="col">Fines &amp; Charges</th>
-	<th scope="col">Description</th>
-	<th scope="col">Account Type</th>
-	<th scope="col">Amount</th>
-	<th scope="col">Amount Outstanding</th>
+	<th>Fines &amp; Charges</th>
+	<th>Description</th>
+	<th>Account Type</th>
+	<th>Amount</th>
+	<th>Amount Outstanding</th>
 </tr>
 	
 <!-- TMPL_LOOP name="loop_pay" -->
@@ -32,12 +35,10 @@
 	<td class="debit"><!-- TMPL_VAR name="amountoutstanding" --></td>
 </tr>
 <!-- /TMPL_LOOP -->
-<tfoot>
 <tr>
 	<td colspan="4">Total Due</td>
-	<td class="debit"><!-- TMPL_VAR name="total" --></td>
-	</tr>
-	</tfoot>
+	<td><!-- TMPL_VAR name="total" --></td>
+</tr>
 </table>
 <input type="submit" name="submit"  value="Make Payment" class="submit" /></form>
 
